[tool.poetry]
name = "image_frequency_analysis"
version = "0.2.5"
description = "A package to perform image frequency analysis using the Fourier Transform method"
authors = ["M Thivagar"]
readme = "README.md"
homepage = "https://github.com/thivagar-manickam/image_frequency_analysis"
repository = "https://github.com/thivagar-manickam/image_frequency_analysis"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["Image Processing", "Fourier Transform", "Edge Detection", "Frequency analysis"]


[tool.poetry.dependencies]
python = ">=3.6"
opencv-python = ">=4.7.0.68"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
matplotlib = ">=3.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"