[tool.poetry]
name = "image_frequency_analysis"
version = "0.2.7"
description = "A package to perform image frequency analysis using the Fourier Transform method"
authors = ["M Thivagar"]
readme = "README.md"
homepage = "https://github.com/thivagar-manickam/image_frequency_analysis"
repository = "https://github.com/thivagar-manickam/image_frequency_analysis"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["Image Processing", "Fourier Transform", "Edge Detection", "Frequency analysis"]


[tool.poetry.dependencies]
python = ">=3.8"
opencv-python = ">=4.5.1.48"
numpy = ">=1.21.4"
pandas = ">=1.3.5"
matplotlib = ">=3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
